--- a/src/index.pug
+++ b/src/index.pug
@@ -8,7 +8,7 @@ html(lang="ru")
 
         link(rel='stylesheet', href='./style.css')
 
-        title Hata
+        title Agencies lite
 body.page
     .container
         .row
