Remove base href from root, replace all path.

--- a/src/blocks/agenciesList/agenciesList.pug
+++ b/src/blocks/agenciesList/agenciesList.pug
@@ -33,13 +33,13 @@
                     .col-xs-3
                         .socialLink
                            .socialLink__image
-                               img(src="/images/mail.png")
+                               img(src="images/mail.png")
                            .socialLink__text
                                a.link.text_black(href="mailto:office@silvan.by")
                                 b office@silvan.by
                         .socialLink
                            .socialLink__image
-                               img(src="/images/icon_silvan.png")
+                               img(src="images/icon_silvan.png")
                            .socialLink__text
                                a.link.text_black(href="http://www.silvan.by")
                                 b http://www.silvan.by
@@ -81,13 +81,13 @@
                     .col-xs-3
                         .socialLink
                            .socialLink__image
-                               img(src="/images/mail.png")
+                               img(src="images/mail.png")
                            .socialLink__text
                                a.link.text_black(href="mailto:office@silvan.by")
                                 b office@silvan.by
                         .socialLink
                            .socialLink__image
-                               img(src="/images/icon_silvan.png")
+                               img(src="images/icon_silvan.png")
                            .socialLink__text
                                a.link.text_black(href="http://www.silvan.by")
                                 b http://www.silvan.by
