--- a/src/blocks/sidebar/sidebar.pug
+++ b/src/blocks/sidebar/sidebar.pug
@@ -1,3 +1,3 @@
 .sidebar
-    img(src="/images/advertising_1.png")
-    img(src="/images/advertising_2.png")
+    img(src="images/advertising_1.png")
+    img(src="images/advertising_2.png")
